--- a/project1/project1/templates/form.html
+++ b/project1/project1/templates/form.html
@@ -3,7 +3,8 @@
         <title>Print</title>
     </head>
     <body>
-        Hello {{name}} 
-       
+        Hello <br>
+        {{Name}} <br> 
+        {{email}}
     </body>
 </html>
