--- a/project1/project1/templates/registration.html
+++ b/project1/project1/templates/registration.html
@@ -9,7 +9,7 @@
     <div class="row">
     <form action="/form" method="post">
         <label for="Name"><b>Name</b></label>
-        <input type="text" placeholder="enter name"  name="name" required>
+        <input type="text" placeholder="enter name"  Name="Name" required>
         <label for="password"><b>password</b></label>
         <input type="password" placeholder="enter password" name="password" required>
         <label for="repeat-password"><b>repeat password</b></label>
