--- a/project1/project1/templates/registration.html
+++ b/project1/project1/templates/registration.html
@@ -14,7 +14,7 @@
         <input type="password" placeholder="enter password" name="password" required>
         <label for="repeat-password"><b>repeat password</b></label>
         <input type="password" placeholder="reenter password" name="password" required>>
-        <label for="email"><b>Email</b></label>
+        <label for="email"><b>email</b></label>
         <input type="text" placeholder="enter email"  name="email" required>
         <div class="col-sm">
             <label for="gender"><b>gender</b></label>
@@ -29,6 +29,7 @@
         <label for="birthday"><b>birthday</b></label>
             <input type="date" id="birthday" name="birthday" required>
         <button class="button" type="submit">submit</button>
+        <button type="submit" class="button" formaction='/auth'>LOGIN</button>
     </form>
     {% if variable1 %}
         <div class ="row" style="text-align: center;">
