UI changing is done

--- a/project1/project1/templates/form.html
+++ b/project1/project1/templates/form.html
@@ -3,6 +3,7 @@
         <title>Print</title>
     </head>
     <body>
+        <h1 style="text-align:center"></h1>
         Hello <br>
         {{Name}} <br> 
         {{email}}
