--- a/project1/project1/templates/login.html
+++ b/project1/project1/templates/login.html
@@ -3,7 +3,7 @@
         <title>LOGIN</title>
     </head>
     <body>
-        <h1 style="text-align">Login success</h1>
+        <h1 style="text-align:center">Login success</h1>
         <form>
             <button type="submit" class="registration" formaction='/logout'>Logout</b></button>
         </form>
