UI changing 2nd time

--- a/project1/project1/templates/registration.html
+++ b/project1/project1/templates/registration.html
@@ -36,7 +36,7 @@
             <label for="others"><b>others</b></label>
                 <input id="others" type="radio"name="gender" value="others"><br>
         </div><br>
-        <h1 align="center"><button class="button" type="submit"><br>submit</button><br></h1>
+        <button class="button" type="submit"><br>submit</button><br><br>
         <button type="submit" class="button" formaction='/auth'>LOGIN</button>
     </form>
     {% if variable1 %}
